<resources>
    <string name="app_name">MadPropertyPal</string>
    <string name="property_name_number">Name and number*</string>
    <string name="property_location">Location*</string>
    <string name="property_bedrooms">Number of bedrooms*</string>
    <string name="property_bedrooms_final">Bedrooms No.*</string>
    <string name="property_bathrooms">Number of bathrooms*</string>
    <string name="property_bathrooms_final">Bathrooms No.*</string>
    <string name="property_size">Size*</string>
    <string name="property_price">Price*</string>
    <string name="property_type">Property type*</string>
    <string name="lease_type">Lease Type*</string>
    <string name="property_amenities">Local amenities</string>
    <string name="property_description">Description</string>
    <string name="property_construction_year">Year of construction</string>
    <string name="property_construction_year_final">Construct. Year</string>
    <string name="property_floors">Number of floors</string>
    <string name="property_floors_final">Floors No.</string>
    <string name="spinner_error">Select an option</string>
    <string name="button_add_property">Add property</string>
    <string name="button_view_property">Property list</string>
    <string name="id">ID*</string>
    <string name="button_edit">Edit property</string>
    <string name="button_delete_property">Delete property</string>
    <string name="button_add_report">Add report</string>
    <string name="button_view_report">View report</string>
    <string name="calendar_date_of_viewing">Viewing date*</string>
    <string name="offer_price">Offer price</string>
    <string name="offer_expiry_date">Offer expiry date</string>
    <string name="conditions_of_offer">Conditions of Offer</string>
    <string name="viewing_comments">Viewing comments</string>
    <string name="view_interest">Viewing interest*</string>
    <string name="title_activity_show_report">ShowReportActivity</string>
    <string name="search_text_name">Property name and number</string>
    <string name="search_text_area">Area</string>
    <string name="search_text_property_type">Type</string>
    <string name="search_text_bedrooms_number">Beds</string>
    <string name="search_text_button">View</string>
    <string name="url">https://gillwindallapp1.appspot.com/madservlet</string>
    <string name="button_upload_data">Upload</string>
    <string name="search_final">Up</string>
</resources>