<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.circularreveal.CircularRevealRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/view_text_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/id"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="0dp"
        android:textSize="20sp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_text_name_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/property_name_number"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="30dp"
        android:textSize="20sp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_text_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/property_location"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="80dp"
        android:textSize="20sp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_text_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/property_size"
        android:inputType="number"
        android:layout_marginEnd="200dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="130dp"
        android:textSize="20sp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_text_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/property_price"
        android:inputType="number"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="130dp"
        android:textSize="20sp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_text_property_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/property_type"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="180dp"
        android:textSize="20sp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_text_lease_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lease_type"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="230dp"
        android:textSize="20sp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_text_construction_year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/property_construction_year_final"
        android:inputType="number"
        android:layout_marginEnd="200dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="280dp"
        android:textSize="20sp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_text_floors_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/property_floors_final"
        android:inputType="number"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="280dp"
        android:textSize="20sp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_text_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/property_description"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="330dp"
        android:textSize="20sp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_text_local_amenities"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/property_amenities"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="380dp"
        android:textSize="20sp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_text_bedrooms_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/property_bedrooms_final"
        android:inputType="number"
        android:layout_marginEnd="200dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="430dp"
        android:textSize="20sp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_text_bathrooms_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/property_bathrooms_final"
        android:inputType="number"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="430dp"
        android:textSize="20sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_edit"
        android:layout_marginEnd="200dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="480dp"
        android:textSize="20sp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_delete_property"
        android:layout_marginEnd="45dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="480dp"
        android:textSize="20sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_add_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_add_report"
        android:layout_marginEnd="200dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="550dp"
        android:textSize="20sp"  />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_view_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_view_report"
        android:layout_marginEnd="45dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="550dp"
        android:textSize="20sp" />

</com.google.android.material.circularreveal.CircularRevealRelativeLayout>