<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.circularreveal.CircularRevealRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/report_id_final"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/id"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="0dp"
        android:textSize="20sp"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/report_view_interest_final"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/view_interest"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="45dp"
        android:textSize="20sp"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/report_offer_price_final"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/offer_price"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="90dp"
        android:textSize="20sp"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/report_offer_conditions_final"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/conditions_of_offer"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="135dp"
        android:textSize="20sp"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/report_expiry_date_final"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/offer_expiry_date"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="180dp"
        android:textSize="20sp"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/report_view_comments_final"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/viewing_comments"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="225dp"
        android:textSize="20sp"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/report_text_viewing_date_final"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/calendar_date_of_viewing"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="270dp"
        android:textSize="20sp"/>

</com.google.android.material.circularreveal.CircularRevealRelativeLayout>