<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context=".Activities.ShowPropertyActivity"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_text_search_bar_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/search_text_name"
        android:textAlignment="center"
        android:layout_marginEnd="90dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:textSize="20sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_upload_final"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:text="@string/search_final"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="300dp"
        android:layout_marginTop="0dp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_text_search_bar_area"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/search_text_area"
        android:textAlignment="center"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="48dp"
        android:textSize="20sp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_text_search_bar_type"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/search_text_property_type"
        android:textAlignment="center"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="48dp"
        android:textSize="20sp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_text_search_bar_bedrooms"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/search_text_bedrooms_number"
        android:textAlignment="center"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="48dp"
        android:textSize="20sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_advanced_search"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:text="@string/search_text_button"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="300dp"
        android:layout_marginTop="48dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="96dp"
        android:textSize="20sp" />

    <WebView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/browser"
        android:visibility="gone"/>

</RelativeLayout>